[package]
name = "http2-server"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http2", "server"] }
hyper-util = {  version = "0.1.11", features = ["tokio"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.44.2", features =["net", "rt-multi-thread", "macros"] }
